--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@angular/forms": "~12.1.2",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
-    "@angular/router": "~12.1.2",    
+    "@angular/router": "~12.1.2",
     "@fortawesome/angular-fontawesome": "^0.10.1",
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "jquery": "^3.6.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
